--- a/eq-web-elastic_query_web.yml
+++ b/eq-web-elastic_query_web.yml
@@ -15,7 +15,7 @@ elastic-query-web-client:
     base-url: 'http://localhost:8084/elastic-query-service/documents'
   query-by-text:
     method: POST
-    uri: "/get-doc-by-text"
+    uri: "/get-document-by-text"
     accept: ${elastic-query-web-client.webclient.accept-type}
 
 spring:
