--- a/eq-elastic_query.yml
+++ b/eq-elastic_query.yml
@@ -2,7 +2,7 @@ elastic-query-service:
   version: v1
 
 server:
-  port: 8084
+#  port: 8084
   servlet:
     context-path: /elastic-query-service
 
