--- a/eq-web-elastic_query_web.yml
+++ b/eq-web-elastic_query_web.yml
@@ -12,7 +12,17 @@ elastic-query-web-client:
     max-in-memory-size: 10485760 # 10MB
     content-type: 'application/vnd.api.v1+json'
     accept-type: 'application/vnd.api.v1+json'
-    base-url: 'http://localhost:8084/elastic-query-service/documents'
+    base-url: 'http://elastic-query-service/elastic-query-service/documents'
+    service-id: elastic-query-service
+    instances:
+      -
+        id: elastic-query-service-1
+        host: localhost
+        port: 8084
+      -
+        id: elastic-query-service-2
+        host: localhost
+        port: 8086
   query-by-text:
     method: POST
     uri: "/get-document-by-text"
