changes for oauth

--- a/eq-elastic_query.yml
+++ b/eq-elastic_query.yml
@@ -1,5 +1,6 @@
 elastic-query-service:
   version: v1
+  custom-audience: elastic-query-service
 
 server:
 #  port: 8084
@@ -19,6 +20,14 @@ user-config:
   username: test
   password: test1234
   roles: USER
+  
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:28080/realms/microservices-realm/
+          jwk-set-uri: http://localhost:28080/realms/microservices-realm/protocol/openid-connect/certs
 
 springdoc:
   api-docs:
