--- a/ks-kafka_streams.yml
+++ b/ks-kafka_streams.yml
@@ -37,6 +37,8 @@ kafka-config:
   topic-names-to-create:
     - twitter-topic
     - twitter-analytics-topic
+  num-of-partitions: 3
+  replication-factor: 3
 
 kafka-streams-config:
   application-id: kafka-streams-application
